:wrench: Fix contacts hover overlapping

--- a/assets/sass/contacts.scss
+++ b/assets/sass/contacts.scss
@@ -22,5 +22,6 @@
     background: rgb(182, 38, 44);
     color: #fff;
     box-shadow: 0 0 1px 7px rgba(182, 38, 44, 0.15);
+    position: relative;
   }
 }
